--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="profile.html">Main profile</a>
     <a href="Camt_INFO.html">CAMT_INFO</a>
 
-    <p>To be continued</p>
+    <p>MOre info pls</p>
 </body>
 </html>
